# SATSolver

./: .gitignore  CMakeLists.txt  core.cpp  lexer.cpp  lexer.hpp  main  main.cpp  testscript.sh
include/: core.hpp  lexer.hpp
test/: sudoku.cnf  test.cnf  test1out.txt  test2.cnf  test2out.txt  test3.cnf  test4.cnf
